--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -97,11 +97,19 @@ body::before{
   inset: 0;
   z-index: 0;
   overflow: hidden;
+  background-image: url("/messtechnik/assets/map.png");
+  background-size: contain;
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-color: #b1865a;
 }
 
-.map-svg{
+.map-route{
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
+  pointer-events: none;
 }
 
 .map-ship{
@@ -499,9 +507,9 @@ a:hover{
   <link rel="stylesheet" href="../crt.css">
   <link rel="stylesheet" href="../neo.css">
 </head>
-<body class="theme-onepiece" data-default-theme="onepiece">
+<body class="theme-matrix" data-default-theme="matrix">
   <div class="map-layer" aria-hidden="true">
-    <svg class="map-svg" viewBox="0 0 1080 540" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg class="map-route" viewBox="0 0 1080 540" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
         <filter id="softGlow" x="-20%" y="-20%" width="140%" height="140%">
           <feGaussianBlur stdDeviation="6" result="blur"/>
@@ -513,7 +521,6 @@ a:hover{
           </feMerge>
         </filter>
       </defs>
-      <image href="/messtechnik/assets/map.png" xlink:href="/messtechnik/assets/map.png" width="1080" height="540" />
       <path id="route-path" d="M1035 250 C 980 210, 900 215, 830 245 C 760 275, 720 310, 670 300 C 620 290, 580 260, 540 255 C 500 250, 470 265, 450 280 C 410 310, 360 330, 300 320 C 230 305, 170 285, 100 290"
         fill="none" stroke="#c4533c" stroke-width="4.5" stroke-dasharray="8 10" stroke-linecap="round" filter="url(#softGlow)"/>
       <image id="ship" class="map-ship" href="/messtechnik/assets/ship.png" xlink:href="/messtechnik/assets/ship.png" width="90" height="70" x="-45" y="-35" />
