--- a/training.html
+++ b/training.html
@@ -78,12 +78,13 @@
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="toc.css">
   <link rel="stylesheet" href="music.css">
+  <link rel="stylesheet" href="themes.css">
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
   <link rel="stylesheet" href="neo.css">
   <link rel="stylesheet" href="training.css">
 </head>
-<body class="training-page">
+<body class="training-page theme-matrix" data-default-theme="matrix">
   <canvas id="rain"></canvas>
 
   <nav class="home-only">
@@ -132,8 +133,8 @@
     <div class="training-hero">
       <canvas id="training-hero" width="96" height="96" aria-label="Neo Pixel Art"></canvas>
       <div class="training-hero-text">
-        <p>Matrix-Defense im gleichen Layout. Auto-Save läuft im Hintergrund und kann als JSON exportiert/importiert werden.</p>
-        <p class="training-hero-sub">Zion Defense Protocols // v14.</p>
+        <p>.</p>
+        <p class="training-hero-sub">"Zion Defense Protocols //""I know kung fu.""</p>
       </div>
     </div>
 
@@ -263,8 +264,11 @@
       </div>
     </section>
 
-    <p class="training-tip">Shortcuts: <code>9</code> öffnet Training von jeder Seite, <code>Shift+S</code> Quick Save, <code>Shift+L</code> Quick Load.</p>
+    <p class="training-tip">Shortcuts: <code>Shift+S</code> Quick Save, <code>Shift+L</code> Quick Load.</p>
   </main>
+  <footer class="theme-toggle">
+    <button class="theme-button" type="button" data-theme-toggle>Theme: Matrix</button>
+  </footer>
   </div>
 
   <div class="training-help" id="training-help-modal" hidden>
@@ -299,7 +303,6 @@
         </ul>
         <h3>Shortcuts</h3>
         <ul>
-          <li><code>9</code> Training öffnen</li>
           <li><code>Shift+S</code> Quick Save</li>
           <li><code>Shift+L</code> Quick Load</li>
         </ul>
@@ -336,6 +339,7 @@
   <script src="view.js"></script>
   <script src="crt.js"></script>
   <script src="neo.js"></script>
+  <script src="themes.js"></script>
   <script src="training.js"></script>
 </body>
 </html>
