--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -31,10 +31,11 @@ body.theme-onepiece{
   --paper:#f7e6c6;
   --paper-dark:#dfc08c;
   --wood:#5b3b1c;
-  --heading: var(--sand);
-  --link: var(--gold);
-  --link-hover: #f6d48a;
-  --link-shadow: 0 0 12px rgba(255,215,140,0.3);
+  --heading: #101820;
+  --link: #2c4f6b;
+  --link-hover: #3b6d91;
+  --link-shadow: 0 0 10px rgba(59,109,145,0.25);
+  color: #1e2a34;
   --rain-opacity: 0.12;
   --rain-filter: hue-rotate(180deg) saturate(0.3);
   --toggle-bg: linear-gradient(180deg, #f7e6c6 0%, #dfc08c 100%);
