Show One Piece flag only in One Piece theme

--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -144,6 +144,10 @@ h1 .flag{
   height: 46px;
 }
 
+body.theme-matrix h1 .flag{
+  display: none;
+}
+
 .flag svg{
   width: 100%;
   height: 100%;
