Apply navy ink color to One Piece body text

--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -49,6 +49,15 @@ body.theme-onepiece{
   font-family: "IM Fell English", "Garamond", "Georgia", serif;
 }
 
+body.theme-onepiece p,
+body.theme-onepiece li,
+body.theme-onepiece td,
+body.theme-onepiece th,
+body.theme-onepiece dl,
+body.theme-onepiece dd{
+  color: #1e2a34;
+}
+
 body.theme-matrix{
   --bg:#050a06;
   --g1:#00ff66;
