Apply sepia ink to small UI text

--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -58,6 +58,14 @@ body.theme-onepiece dd{
   color: #3b2412;
 }
 
+body.theme-onepiece .toc-label,
+body.theme-onepiece .toc-title,
+body.theme-onepiece .search-meta,
+body.theme-onepiece .search-empty,
+body.theme-onepiece .bm-meta{
+  color: #3b2412;
+}
+
 body.theme-matrix{
   --bg:#050a06;
   --g1:#00ff66;
