Disable scan effect in One Piece panels

--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -343,6 +343,8 @@ a:hover{
   border-radius: 10px;
   pointer-events: none;
   opacity: 0.7;
+  background: none;
+  animation: none;
 }
 
 .theme-onepiece .toc-panel::after{
@@ -431,6 +433,8 @@ a:hover{
   border-radius: 10px;
   pointer-events: none;
   opacity: 0.7;
+  background: none;
+  animation: none;
 }
 
 .theme-onepiece .bm-panel::after{
