Improve small text contrast in One Piece theme

--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -63,7 +63,8 @@ body.theme-onepiece .toc-title,
 body.theme-onepiece .search-meta,
 body.theme-onepiece .search-empty,
 body.theme-onepiece .bm-meta{
-  color: #3b2412;
+  color: #533521;
+  font-weight: 500;
 }
 
 body.theme-matrix{
