--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -65,6 +65,7 @@ body.theme-onepiece .search-empty,
 body.theme-onepiece .bm-meta{
   color: #533521;
   font-weight: 500;
+  text-shadow: 0 0 6px rgba(255,255,255,0.35);
 }
 
 body.theme-matrix{
