--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -65,7 +65,8 @@ body.theme-onepiece .search-empty,
 body.theme-onepiece .bm-meta{
   color: #533521;
   font-weight: 500;
-  text-shadow: 0 0 10px rgba(255,255,255,0.5);
+  text-shadow: 0 0 14px rgba(255,255,255,0.7) !important;
+  filter: drop-shadow(0 0 8px rgba(255,255,255,0.35));
 }
 
 body.theme-matrix{
