Add coordinate grid overlay for route planning

--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -553,6 +553,36 @@ a:hover{
           </feMerge>
         </filter>
       </defs>
+      <g id="route-grid" opacity="0.55">
+        <rect x="0" y="0" width="1080" height="540" fill="none" stroke="rgba(0,0,0,0.25)" stroke-width="1"/>
+        <line x1="540" y1="0" x2="540" y2="540" stroke="rgba(0,0,0,0.35)" stroke-width="1.5"/>
+        <line x1="0" y1="270" x2="1080" y2="270" stroke="rgba(0,0,0,0.35)" stroke-width="1.5"/>
+        <g stroke="rgba(0,0,0,0.18)" stroke-width="1">
+          <line x1="108" y1="0" x2="108" y2="540"/>
+          <line x1="216" y1="0" x2="216" y2="540"/>
+          <line x1="324" y1="0" x2="324" y2="540"/>
+          <line x1="432" y1="0" x2="432" y2="540"/>
+          <line x1="648" y1="0" x2="648" y2="540"/>
+          <line x1="756" y1="0" x2="756" y2="540"/>
+          <line x1="864" y1="0" x2="864" y2="540"/>
+          <line x1="972" y1="0" x2="972" y2="540"/>
+          <line x1="0" y1="54" x2="1080" y2="54"/>
+          <line x1="0" y1="108" x2="1080" y2="108"/>
+          <line x1="0" y1="162" x2="1080" y2="162"/>
+          <line x1="0" y1="216" x2="1080" y2="216"/>
+          <line x1="0" y1="324" x2="1080" y2="324"/>
+          <line x1="0" y1="378" x2="1080" y2="378"/>
+          <line x1="0" y1="432" x2="1080" y2="432"/>
+          <line x1="0" y1="486" x2="1080" y2="486"/>
+        </g>
+        <g fill="#2b1a0c" font-size="12" font-family="ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, \"Liberation Mono\", monospace">
+          <text x="548" y="18">0 / 100</text>
+          <text x="548" y="535">0 / -100</text>
+          <text x="12" y="270">-100</text>
+          <text x="1035" y="270">+100</text>
+          <text x="548" y="284">0</text>
+        </g>
+      </g>
       <path id="route-path" d="M1020 80 C 900 130, 760 190, 620 240 C 580 255, 560 265, 540 270 C 620 285, 720 285, 820 280 C 920 275, 1000 270, 1040 270"
         fill="none" stroke="#c4533c" stroke-width="4.5" stroke-dasharray="8 10" stroke-linecap="round" filter="url(#softGlow)"/>
       <image id="ship" class="map-ship" href="/messtechnik/assets/ship.png" xlink:href="/messtechnik/assets/ship.png" width="90" height="70" x="-45" y="-35" />
