--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -35,7 +35,7 @@ body.theme-onepiece{
   --link: #2c4f6b;
   --link-hover: #3b6d91;
   --link-shadow: 0 0 10px rgba(59,109,145,0.25);
-  color: #3b2412;
+  color: #5f3d23;
   --rain-opacity: 0.12;
   --rain-filter: hue-rotate(180deg) saturate(0.3);
   --toggle-bg: linear-gradient(180deg, #f7e6c6 0%, #dfc08c 100%);
@@ -55,7 +55,8 @@ body.theme-onepiece td,
 body.theme-onepiece th,
 body.theme-onepiece dl,
 body.theme-onepiece dd{
-  color: #3b2412;
+  color: #5f3d23;
+  text-shadow: 0 0 10px rgba(255,255,255,0.45);
 }
 
 body.theme-onepiece .toc-label,
