--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -59,6 +59,16 @@ body.theme-onepiece dd{
   text-shadow: 0 0 10px rgba(255,255,255,0.45);
 }
 
+body.theme-onepiece.rain-hidden p,
+body.theme-onepiece.rain-hidden li,
+body.theme-onepiece.rain-hidden td,
+body.theme-onepiece.rain-hidden th,
+body.theme-onepiece.rain-hidden dl,
+body.theme-onepiece.rain-hidden dd{
+  color: #6b4528;
+  text-shadow: 0 0 14px rgba(255,255,255,0.6);
+}
+
 body.theme-onepiece .toc-label,
 body.theme-onepiece .toc-title,
 body.theme-onepiece .search-meta,
@@ -792,9 +802,9 @@ a:hover{
     [10, -6],
     [12, -5],
     [17, -4],
-    [21, -11],
-    [26, -10],
-    [32, -13]
+    [22, -12],
+    [29, -11],
+    [36, -15]
   ];
 
   function toSvg([x, y]){
