--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -47,6 +47,8 @@ body.theme-onepiece{
     linear-gradient(180deg, #0a1724 0%, #0f2738 45%, #0a1b28 100%);
   color: var(--sand);
   font-family: "IM Fell English", "Garamond", "Georgia", serif;
+  font-size: 19.5px;
+  font-weight: 500;
 }
 
 body.theme-onepiece p,
@@ -57,6 +59,8 @@ body.theme-onepiece dl,
 body.theme-onepiece dd{
   color: #5f3d23;
   text-shadow: 0 0 10px rgba(255,255,255,0.45);
+  font-size: 1.02em;
+  font-weight: 500;
 }
 
 body.theme-onepiece.rain-hidden p,
@@ -75,9 +79,10 @@ body.theme-onepiece .search-meta,
 body.theme-onepiece .search-empty,
 body.theme-onepiece .bm-meta{
   color: #533521;
-  font-weight: 500;
+  font-weight: 600;
   text-shadow: 0 0 14px rgba(255,255,255,0.7) !important;
   filter: drop-shadow(0 0 8px rgba(255,255,255,0.35));
+  font-size: 0.95em;
 }
 
 body.theme-matrix{
@@ -194,6 +199,7 @@ h1, h2, h3{
   letter-spacing:0.06em;
   color: var(--heading, var(--sand));
   text-shadow: 0 6px 16px var(--shadow);
+  font-weight: 600;
 }
 
 h1{
