--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -58,7 +58,9 @@ body.theme-onepiece th,
 body.theme-onepiece dl,
 body.theme-onepiece dd{
   color: #5f3d23;
-  text-shadow: 0 0 10px rgba(255,255,255,0.45);
+  text-shadow:
+    0 0 14px rgba(255,255,255,0.65),
+    0 0 26px rgba(255,255,255,0.35);
   font-size: 1.02em;
   font-weight: 500;
 }
@@ -70,7 +72,9 @@ body.theme-onepiece.rain-hidden th,
 body.theme-onepiece.rain-hidden dl,
 body.theme-onepiece.rain-hidden dd{
   color: #6b4528;
-  text-shadow: 0 0 14px rgba(255,255,255,0.6);
+  text-shadow:
+    0 0 16px rgba(255,255,255,0.7),
+    0 0 30px rgba(255,255,255,0.4);
 }
 
 body.theme-onepiece .toc-label,
