Set One Piece body text to cream

--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -57,7 +57,7 @@ body.theme-onepiece td,
 body.theme-onepiece th,
 body.theme-onepiece dl,
 body.theme-onepiece dd{
-  color: #5f3d23;
+  color: #f4e2c8;
   text-shadow:
     0 0 14px rgba(255,255,255,0.65),
     0 0 26px rgba(255,255,255,0.35);
@@ -71,7 +71,7 @@ body.theme-onepiece.rain-hidden td,
 body.theme-onepiece.rain-hidden th,
 body.theme-onepiece.rain-hidden dl,
 body.theme-onepiece.rain-hidden dd{
-  color: #6b4528;
+  color: #f4e2c8;
   text-shadow:
     0 0 16px rgba(255,255,255,0.7),
     0 0 30px rgba(255,255,255,0.4);
