Ensure ship always faces direction of travel

--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -884,7 +884,9 @@ a:hover{
     const seg = segments[segIndex];
     const point = bezierPoint(seg, segT);
     const tangent = bezierTangent(seg, segT);
-    const angle = Math.atan2(tangent.y, tangent.x) * 180 / Math.PI;
+    const dx = tangent.x * direction;
+    const dy = tangent.y * direction;
+    const angle = Math.atan2(dy, dx) * 180 / Math.PI;
     ship.setAttribute("transform", `translate(${point.x} ${point.y}) rotate(${angle})`);
   }
 
