--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -887,7 +887,11 @@ a:hover{
     const tangent = bezierTangent(seg, segT);
     const dx = tangent.x * direction;
     const dy = tangent.y * direction;
-    const angle = Math.atan2(dy, dx) * 180 / Math.PI + 180;
+    let angle = Math.atan2(dy, dx) * 180 / Math.PI + 180;
+    angle = ((angle % 360) + 360) % 360;
+    if (angle > 90 && angle < 270){
+      angle = (angle + 180) % 360;
+    }
     ship.setAttribute("transform", `translate(${point.x} ${point.y}) rotate(${angle})`);
   }
 
