--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -889,7 +889,8 @@ a:hover{
     const dy = tangent.y * direction;
     let angle = Math.atan2(dy, dx) * 180 / Math.PI + 180;
     angle = ((angle % 360) + 360) % 360;
-    if (dx < 0){
+    const pivotIndex = routePoints.findIndex(([x, y]) => x === -2 && y === -6);
+    if (pivotIndex !== -1 && segIndex >= pivotIndex){
       angle = (angle + 180) % 360;
     }
     if (angle > 90 && angle < 270){
