Remove theme toggle from non-Messtechnik pages

--- a/elektrotechnik/elektrotechnik.html
+++ b/elektrotechnik/elektrotechnik.html
@@ -89,12 +89,11 @@ a:hover{
   <link rel="stylesheet" href="../search.css">
   <link rel="stylesheet" href="../toc.css">
   <link rel="stylesheet" href="../music.css">
-  <link rel="stylesheet" href="../themes.css">
   <link rel="stylesheet" href="../matrix-effects.css">
   <link rel="stylesheet" href="../crt.css">
   <link rel="stylesheet" href="../neo.css">
 </head>
-<body class="theme-matrix" data-default-theme="matrix">
+<body>
   <canvas id="rain"></canvas>
   <nav class="home-only">
   <a href="../index.html" class="home">← Schreibtisch</a>
@@ -181,9 +180,6 @@ a:hover{
 
 
   </main>
-  <footer class="theme-toggle">
-    <button class="theme-button" type="button" data-theme-toggle>Theme: Matrix</button>
-  </footer>
   <script src="../rain.js"></script>
   <script src="../bookmarks.js"></script>
   <script src="../search.js"></script>
@@ -192,6 +188,5 @@ a:hover{
   <script src="../view.js"></script>
   <script src="../crt.js"></script>
   <script src="../neo.js"></script>
-  <script src="../themes.js"></script>
 </body>
 </html>
