--- a/training.html
+++ b/training.html
@@ -78,13 +78,12 @@
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="toc.css">
   <link rel="stylesheet" href="music.css">
-  <link rel="stylesheet" href="themes.css">
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
   <link rel="stylesheet" href="neo.css">
   <link rel="stylesheet" href="training.css">
 </head>
-<body class="training-page theme-matrix" data-default-theme="matrix">
+<body class="training-page">
   <canvas id="rain"></canvas>
 
   <nav class="home-only">
@@ -266,9 +265,6 @@
 
     <p class="training-tip">Shortcuts: <code>Shift+S</code> Quick Save, <code>Shift+L</code> Quick Load.</p>
   </main>
-  <footer class="theme-toggle">
-    <button class="theme-button" type="button" data-theme-toggle>Theme: Matrix</button>
-  </footer>
   </div>
 
   <div class="training-help" id="training-help-modal" hidden>
@@ -339,7 +335,6 @@
   <script src="view.js"></script>
   <script src="crt.js"></script>
   <script src="neo.js"></script>
-  <script src="themes.js"></script>
   <script src="training.js"></script>
 </body>
 </html>
