--- a/white-rabbit.html
+++ b/white-rabbit.html
@@ -88,12 +88,11 @@
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="toc.css">
   <link rel="stylesheet" href="music.css">
-  <link rel="stylesheet" href="themes.css">
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
   <link rel="stylesheet" href="neo.css">
 </head>
-<body class="white-rabbit theme-matrix" data-neo="knock" data-default-theme="matrix">
+<body class="white-rabbit" data-neo="knock">
   <canvas id="rain"></canvas>
 
   <nav class="home-only">
@@ -199,9 +198,6 @@
       </tbody>
     </table>
   </main>
-  <footer class="theme-toggle">
-    <button class="theme-button" type="button" data-theme-toggle>Theme: Matrix</button>
-  </footer>
   </div>
 
   <script src="rain.js"></script>
@@ -213,6 +209,5 @@
   <script src="view.js"></script>
   <script src="crt.js"></script>
   <script src="neo.js"></script>
-  <script src="themes.js"></script>
 </body>
 </html>
