--- a/statistik.html
+++ b/statistik.html
@@ -84,12 +84,11 @@ a:hover{
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="toc.css">
   <link rel="stylesheet" href="music.css">
-  <link rel="stylesheet" href="themes.css">
   <link rel="stylesheet" href="matrix-effects.css">
   <link rel="stylesheet" href="crt.css">
   <link rel="stylesheet" href="neo.css">
 </head>
-<body class="theme-matrix" data-default-theme="matrix">
+<body>
   <canvas id="rain"></canvas>
   <nav class="home-only">
     <a href="index.html" class="home">Schreibtisch</a>
@@ -139,9 +138,6 @@ a:hover{
     <li>
 </ul>
   </main>
-  <footer class="theme-toggle">
-    <button class="theme-button" type="button" data-theme-toggle>Theme: Matrix</button>
-  </footer>
   <script src="rain.js"></script>
   <script src="bookmarks.js"></script>
   <script src="search.js"></script>
@@ -150,6 +146,5 @@ a:hover{
   <script src="view.js"></script>
   <script src="crt.js"></script>
   <script src="neo.js"></script>
-  <script src="themes.js"></script>
 </body>
 </html>
